--- a/index.html
+++ b/index.html
@@ -30,34 +30,34 @@
             </ul>
         </div>
         <nav>
-            <a class="logo" href="https://parkgippeum.github.io/clean_dew/"><img src="images/logo.png" alt="logo"></a>
+            <a class="logo" href="https://dahee-park95.github.io/clean_dew/"><img src="images/logo.png" alt="logo"></a>
 
             <ul class="gnb">
                 <li>
-                    <a href="https://parkgippeum.github.io/clean_dew_sub1">브랜드</a>
+                    <a href="https://dahee-park95.github.io/clean_dew_sub1">브랜드</a>
                     <ul class="sub">
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub1/#contents1">브랜드스토리</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub1/#contents2">키워드</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub1/#contents3">로고</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub1/#contents4">오시는길</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub1/#contents1">브랜드스토리</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub1/#contents2">키워드</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub1/#contents3">로고</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub1/#contents4">오시는길</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="https://parkgippeum.github.io/clean_dew_sub2">제품</a>
+                    <a href=https://dahee-park95.github.io/clean_dew_sub2">제품</a>
                 </li>
                 <li>
-                    <a href="https://parkgippeum.github.io/clean_dew_sub3">매거진</a>
+                    <a href="https://dahee-park95.github.io/clean_dew_sub3">매거진</a>
                     <ul class="sub">
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub3/#contents1">인기 매거진</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub3/#contents2">매거진</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub3/#contents1">인기 매거진</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub3/#contents2">매거진</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="https://parkgippeum.github.io/clean_dew_sub4">커뮤니티</a>
+                    <a href="https://dahee-park95.github.io/clean_dew_sub4">커뮤니티</a>
                     <ul class="sub">
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub4/#contents1">이벤트</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub4/#contents2">공지사항</a></li>
-                        <li><a href="https://parkgippeum.github.io/clean_dew_sub4/#contents3">고객센터</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub4/#contents1">이벤트</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub4/#contents2">공지사항</a></li>
+                        <li><a href="https://dahee-park95.github.io/clean_dew_sub4/#contents3">고객센터</a></li>
                     </ul>
                 </li>
             </ul>
@@ -336,3 +336,4 @@
 	<script src="js/swiper.min.js"></script>
 </body>
 </html>
+
