--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
         <div class="footer_inner">
             <ul class="footer_left">
                 <li><a href="#"><img src="images/footer_logo.png" alt="footer_logo"></a></li>
-                <li>법인명 : 클린듀(Clean Dew) | 대표자 : 박기쁨 | 연락처 : 010-1234-5678</li>
-                <li>사업자등록번호 : 123-12-12345 | 통신판매업신고 : 2024-부산-01234</li>
-                <li>주소 : 부산광역시 강서구</li>
+                <li>법인명 : 클린듀(Clean Dew) | 대표자 : 박다희| 연락처 : 010-1234-5678</li>
+                <li>사업자등록번호 : 123-12-12345 | 통신판매업신고 : 2024-부산-00000</li>
+                <li>주소 : 부산광역시 00구</li>
             </ul>
             <ul class="footer_right">
                 <li>고객센터 | 070-1234-5678</li>
@@ -336,4 +336,5 @@
 	<script src="js/swiper.min.js"></script>
 </body>
 </html>
+
 
